--- a/pages/addCustodian/addCustodian.wxml
+++ b/pages/addCustodian/addCustodian.wxml
@@ -1,11 +1,30 @@
 <!--pages/addCustodian/addCustodian.wxml-->
 <cu-custom isBack="{{true}}" bgColor="bg-white" >
   <view slot="backText"></view>
-  <view slot="content">添加联系人</view>
+  <view slot="content">{{title}}</view>
 </cu-custom>
 
 <form bindsubmit="submit">
-  <view class="P5 app_flex">
+  <view class="add_container">
+    <view class="add_info">
+      <view class="detail_header">
+        <view class="detail_title">联系人信息</view>
+        <view class="detail_right">
+        </view>
+      </view>
+      <view class="detail_center">
+        <view class="P5_1 app_font" style="padding-left:30rpx;color: #333333;">客户名称</view>
+        <input class='P5_2 app_font' bindinput="bindSetData2" placeholder='请填写联系人姓名' type="text" name="name" value="{{name}}"></input>
+      </view>
+      <view class="line"></view>
+      <view class="detail_center">
+        <view class="P5_1 app_font" style="padding-left:30rpx;color: #333333;">手机号</view>
+        <input class='P5_2 app_font' bindinput="bindSetData3" placeholder='请填写联系人手机号' maxlength="11" name="phone" type="number" value="{{phone}}"></input>
+      </view>
+    </view>
+  </view>
+
+  <!-- <view class="P5 app_flex">
     <view class="P5_1 app_font">姓名</view>
       <input class='P5_2 app_font' bindinput="bindSetData2" placeholder='请填写联系人姓名' type="text" name="name"></input>
   </view>
@@ -13,14 +32,22 @@
   <view class="P5 app_flex">
     <view class="P5_1 app_font">手机号</view>
     <input class='P5_2 app_font' bindinput="bindSetData3" placeholder='请填写联系人手机号' maxlength="11" name="phone" type="number" ></input>
-  </view>
+  </view> -->
 
   <view style="margin-top:100rpx;">
-    <button class='P6 app_btn' style='width:500rpx;' form-type="submit" disabled="{{submitState}}">保存</button>
+    <button class='app_btn' style="width: 670rpx;height: 88rpx;background: {{submitState?'#999999':'#307FF5'}};border-radius: 12rpx;color:#FFFFFF;" form-type="submit" disabled="{{submitState}}">保存</button>
   </view>
 </form>
 
-<view class="icon-box-ctn">
+<view class="icon-box-ctn" wx:if="{{isMCus == 0}}">
       <icon class="weui-icon-search_in-box" type="warn" size="14" bindtap="searchHandle"/>
       <view class="icon-box-desc">信息提交后不可修改，如需修改请联系管理员</view>
 </view>
+
+<view class="icon-box-ctn" wx:if="{{isMCus == 2}}">
+  <view class="icon-box-delete" bind:tap="bindShowDialog">删除</view>
+</view>
+
+<!-- 弹框 -->
+  <dialog-cus showDialog='{{showDialog}}' datas="{{dialogData}}" bind:dialogCancel="dialogCancel" bind:dialogSure="dialogSure" />
+
