--- a/pages/addCustodian/addCustodian.wxss
+++ b/pages/addCustodian/addCustodian.wxss
@@ -76,8 +76,8 @@
   width: 70%;
   padding: 20rpx;
   height: 80rpx;
-  color: #2D2D2D;
-  text-align: right;
+  color: #333333;
+  text-align: left;
 }
 .P6{
   margin: 0 125rpx;
@@ -104,4 +104,54 @@
   align-items: center;
   justify-content: center;
   margin-top: 40rpx;
+}
+
+/**
+* 修改
+*/
+page{
+  background: #f5f5f5;
+}
+.add_container{
+  margin: 0rpx 40rpx;
+}
+.add_info{
+  width: 670rpx;
+  background: #FFFFFF;
+  border-radius: 12rpx;
+  margin-top: 40rpx;
+  padding-bottom: 10rpx;
+}
+.detail_header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 30rpx;
+}
+.detail_title{
+  font-size: 36rpx;
+  color: #333333;
+}
+
+.detail_right{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.detail_center{
+  display: flex;
+  /* align-items: center; */
+  justify-content: space-between;
+  padding: 0rpx  0rpx;
+}
+
+.line{
+  margin: 20rpx 30rpx;
+  height: 1px;
+  background: #DDDDDD;
+}
+
+.icon-box-delete{
+  font-size: 28rpx;
+  color: #C9024D;
 }
