--- a/pages/orderList/orderList.wxml
+++ b/pages/orderList/orderList.wxml
@@ -2,7 +2,111 @@
     <view slot="backText"></view>
     <view slot="content">工单列表</view>
 </cu-custom>
+<scroll-view scroll-x class="bg-white nav text-center" style="background-color: #FFF;position:fixed;top:9%;z-index:9999;">
+  <view class="cu-item {{index==TabCur?'text-blue cur':''}}" style="border-bottom: none;" wx:for="{{statusList}}" wx:key="index" bindtap="tabSelect" data-id="{{index}}">
+      <span >{{statusList[index]}}</span>
+      <span >({{orderList.length}})</span>
+  </view>
+</scroll-view>
 <view class="page"> 
+    <view class="new_p1">
+        <block wx:for="{{orderList}}" wx:key="index">
+            <view class="new_p1_view" bindtap="toInfo" data-id = "{{item.id}}" data-type="{{item.type}}">
+                <view class="new_p2" style="align-items: center;">
+                    <view class="new_p2_1">
+                        <view class="new_p2_title">装机培训</view>
+                        <view class="new_p2_type">派单</view>
+                    </view>
+                    <view class="new_p2_status">进行中</view>
+                </view>
+
+                <view class="new_p2" style="margin-top:30rpx;">
+                    <view class="new_p2_gray">客户名称：</view>
+                    <view class="new_p2_black">新疆维吾尔族库尔勒市八音郭楞蒙自治州人民医院</view>
+                </view>
+
+                <view class="new_p2" style="margin-top:30rpx;">
+                    <view class="new_p2_gray">预约时间：</view>
+                    <view class="new_p2_black">{{item.time}}</view>
+                </view>
+
+                <view class="new_p2" style="margin-top:30rpx;">
+                    <view class="new_p2_gray">客户地址：</view>
+                    <view class="new_p2_black">{{item.address}}</view>
+                </view>
+
+                <view class="new_p2" style="margin-top:30rpx;">
+                    <view class="new_p2_gray">工单编号：</view>
+                    <view class="new_p2_black">{{item.order_num}}</view>
+                </view>
+
+                <view class="new_p2" style="margin-top:30rpx;">
+                    <view class="new_p2_gray">技术支持：</view>
+                    <view class="new_p2_black">李四</view>
+                </view>
+
+                <view class="new_line"></view>
+
+                <view class="new_p3">
+                    <view class="new_p3_more_view">
+                        <view class="new_p3_more" catch:tap="bindMore">更多</view>
+                        <view class="new_p3_more_dialog">
+                            <view class="new_p3_more" style="font-size: 28rpx;">关闭工单</view>
+                            <view class="new_p3_more_"></view>
+                        </view>
+                    </view>
+                    <!-- <view class="new_p3_2">关闭工单</view> -->
+                    <view class="new_p3_2">修改工单</view>
+                    <view class="new_p3_2">立即派单</view>
+                    <view class="new_p3_1">完成服务</view>
+                </view>
+                 
+
+                <!-- <view style="display:flex;align-items:center;flex-wrap:wrap;border-bottom: 1px solid #F9F9F9;">
+                    <view class="title" wx:if="{{item.type==1}}">
+                        <image src="../../image/repair.png" class='img' />现场服务</view>
+                    <view class="title" wx:if="{{item.type==2}}">
+                        <image src="../../image/repairTest1.png" class='img' />返厂维修</view>
+                    <view class="title" wx:if="{{item.type==3}}">
+                        <image src="../../image/computer.png" class='img' />装机培训</view>
+                    <view class="title" wx:if="{{item.type==4}}">
+                        <image src="../../image/reagent.png" class='img' />试剂培训</view>
+                    <view class="title" wx:if="{{item.type==5}}">
+                        <image src="../../image/phone.png" class='img' />远程服务</view>
+                <text class="cuIcon-right lg text-gray" style="text-align:right;width:60%;margin-right: 5%;"></text>
+                </view>
+                <view class="P2_1 app_flex">
+                    <view class="P2_1_1">工单编号</view>
+                    <view class="P2_1_2">{{item.order_num}}</view>
+                </view>
+                <view class="P2_1 app_flex">
+                    <view class="P2_1_1">预约时间</view>
+                    <view class="P2_1_2">{{item.time}}</view>
+                </view>
+                <view class="P2_1 app_flex">
+                    <view class="P2_1_1">服务地址</view>
+                    <view class="P2_1_2">{{item.address}}</view>
+                </view> -->
+            </view>
+        </block>
+        
+        <view hidden wx:if="{{alreadyChecked==true}}">
+            <image class="app_noinfo_img" src="../../image/nodata.png" mode="widthFix"></image>
+            <view class="app_noinfo_desc">{{tip}}</view>
+        </view>
+        <view  wx:if="{{alreadyChecked_temp==true}}">
+            <image class="app_noinfo_img" src="../../image/nodata.png" mode="widthFix"></image>
+            <view class="app_noinfo_desc">{{tip_temp}}</view>
+        </view>
+        <!-- <view class='more'>
+                <button loading="{{loading}}" disabled="{{disabled}}" catchtap="setLoading">{{loadText}}</button>
+            </view>  -->
+    </view>
+
+    <view class="app_bottom_view"></view>
+</view>
+
+<!-- <view class="page"> 
     <view class="P1">
         <block wx:for="{{orderList}}">
             <view class="P2 app_font" bindtap="toInfo" data-id = "{{item.id}}" data-type="{{item.type}}">
@@ -42,10 +146,7 @@
             <image class="app_noinfo_img" src="../../image/nodata.png" mode="widthFix"></image>
             <view class="app_noinfo_desc">{{tip_temp}}</view>
         </view>
-        <!-- <view class='more'>
-                <button loading="{{loading}}" disabled="{{disabled}}" catchtap="setLoading">{{loadText}}</button>
-            </view>  -->
     </view>
 
     <view class="app_bottom_view"></view>
-</view>
+</view> -->
